# Twident

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  Makefile.am  README  autogen.bash  config.h.in  configure.ac  pino.desktop  update_trnslations.sh
cmake/: FindVala.cmake  ParseArguments.cmake  ValaPrecompile.cmake  ValaVersion.cmake
indicator/: pino  twident
po/: POTFILES.skip
src/: account_abstract.vala  account_state.vala  accounts.vala  accounts_types.vala  accounts_widget.vala  avatar.vala  bg_box.vala  conversation_view.vala  create_dialog_generic.vala  event_box_tr.vala  feed_model.vala  feed_view.vala  globals.vala  hig_table.vala  icon_with_status_cell_renderer.vala  identica_account.vala  identica_create_dialog.vala  identica_stream_group.vala  img_cache.vala  main.vala  main_window.vala  menu_indicator.vala  meta_row.vala  pino_enums.vala  redrawable.vala  reply_label.vala  search_dialog.vala  search_interface.vala  settings.vala  status.vala  status_box.vala  status_choose_bar.vala  status_delegate.vala  stream_abstract.vala  stream_meta.vala  stream_state.vala  streams_types.vala  text_input.vala  thumb.vala  time_utils.vala  (+19 more)
src/excluded/: content_view.vala  template.vala
src/vapi/: config.vapi  time_parser.c  time_parser.h
templates/: main.tpl  status.tpl  status_direct.tpl  status_me.tpl  wscript
vapi/: config.vapi  img_cache_saver.c  time_parser.c  time_parser.h
