AC_PREREQ([2.68])
AC_INIT([Twident],[0.3],[Marc-Antoine@Perennou.com])

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_SRCDIR([src/])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_AUX_DIR([.aux])

AC_SUBST([PACKAGE_NAME], ["$PACKAGE_NAME"])
AC_SUBST([PACKAGE_VERSION], ["$PACKAGE_VERSION"])

AM_INIT_AUTOMAKE([1.11 dist-bzip2 no-dist-gzip foreign])
AM_MAINTAINER_MODE

m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])

AC_PROG_CC

AC_PATH_PROG(VALAC, valac-0.12, valac-0.12)
AC_SUBST(VAPIDIR)

AC_DEFINE_UNQUOTED([APPNAME], ["$PACKAGE_NAME"], [Application name])

GETTEXT_PACKAGE=$PACKAGE_NAME
AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE], ["$GETTEXT_PACKAGE"], [Gettext Package])
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT
IT_PROG_INTLTOOL([0.35.0])

AC_SUBST([bindir], ["$bindir"])
AC_SUBST([libexecdir], ["$libexecdir"])
AC_SUBST([localedir], ["$localedir"])

AC_PROG_INSTALL

GLIB_GSETTINGS

PKG_CHECK_MODULES(GLIB, [glib-2.0 >= 2.14.0])
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

PKG_CHECK_MODULES(GIO, [gio-2.0 >= 2.14.0])
GIO_VALAFLAGS="--pkg=gio-2.0"
AC_SUBST(GIO_CFLAGS)
AC_SUBST(GIO_LIBS)
AC_SUBST(GIO_VALAFLAGS)

PKG_CHECK_MODULES(GTK, [gtk+-2.0 >= 2.24.0])
GTK_VALAFLAGS="--pkg=gtk+-2.0"
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)
AC_SUBST(GTK_VALAFLAGS)

PKG_CHECK_MODULES(GEE, [gee-1.0 >= 0.5.0])
GEE_VALAFLAGS="--pkg=gee-1.0"
AC_SUBST(GEE_CFLAGS)
AC_SUBST(GEE_LIBS)
AC_SUBST(GEE_VALAFLAGS)

PKG_CHECK_MODULES(LIBNOTIFY, [libnotify >= 0.7.0])
LIBNOTIFY_VALAFLAGS="--pkg=libnotify"
AC_SUBST(LIBNOTIFY_CFLAGS)
AC_SUBST(LIBNOTIFY_LIBS)
AC_SUBST(LIBNOTIFY_VALAFLAGS)

PKG_CHECK_MODULES(LIBSOUP, [libsoup-2.4 >= 2.4])
LIBSOUP_VALAFLAGS="--pkg=libnotify"
AC_SUBST(LIBSOUP_CFLAGS)
AC_SUBST(LIBSOUP_LIBS)
AC_SUBST(LIBSOUP_VALAFLAGS)

PKG_CHECK_MODULES(LIBXML, [libxml-2.0 >= 2.0])
LIBXML_VALAFLAGS="--pkg=libxml-2.0"
AC_SUBST(LIBXML_CFLAGS)
AC_SUBST(LIBXML_LIBS)
AC_SUBST(LIBXML_VALAFLAGS)

PKG_CHECK_MODULES(REST, [rest-0.7 >= 0.7])
REST_VALAFLAGS="--pkg=rest-0.6"
AC_SUBST(REST_CFLAGS)
AC_SUBST(REST_LIBS)
AC_SUBST(REST_VALAFLAGS)

PKG_CHECK_MODULES(RESTEXTRAS, [rest-extras-0.7 >= 0.7])
RESTEXTRAS_VALAFLAGS="--pkg=rest-extras-0.6"
AC_SUBST(RESTEXTRAS_CFLAGS)
AC_SUBST(RESTEXTRAS_LIBS)
AC_SUBST(RESTEXTRAS_VALAFLAGS)

AC_CONFIG_FILES([
  po/Makefile.in
  Makefile
])
AC_OUTPUT

